Refactorings for Spring Boot integration